@@ -11,6 +11,13 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-10
+2015-03-3 David Schneider
+- small data JIRA issue PSAS-85
+- document idx and smd in dataset specification
+- if smd, look for small data in /smalldata subdirectory to xtc directory
+- if smd, look for files ending with .smd.xtc	
+	
 Tag: V00-01-09
 2014-03-12 Igor Gaponenko
 - extended dataset specification to allow filtering on ranges of streams
